Added fees to pricing plan's options response
